<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="AliasOnlyThisProject" Id="{c1fa40a0-f430-476a-8fef-337194c5b0d5}">
    <Declaration><![CDATA[TYPE AliasOnlyThisProject :
STRUCT 
	systemTime : TIMESTRUCT;
	bValid : BOOL := true;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>