<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{9bbaf649-16ad-4638-9817-6a7ae1f93f6d}">
    <Declaration><![CDATA[
VAR_GLOBAL
	fbMachineLogger : FB_FileLogger;
	fbMachineTime	: AliasOnlyThisProject;
END_VAR
VAR_GLOBAL CONSTANT
	TIME_INIT	: TIME := T#30S;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>