<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{3619e49b-d106-43f4-aab7-1d16843c522e}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	
fb_timeCrossCheck	: FB_TimeCrossCheck2System;
END_VAR


]]></Declaration>
    <Implementation>
      <ST><![CDATA[fb_timeCrossCheck(	TimeStruct_Sys1 := pmDev.AvevaTimeStruct,
					TimeStruct_Sys2 := pmDev.NT_GetTime.TIMESTR,
					secondDifferentAllow := pmdev.SecondDifferentAllow,
					bErrorTimeTwoSystem => pmDev.bAlarmDifferentTime2System);


pmdev.NT_GetTime(START := FALSE);
pmdev.NT_GetTime(START := TRUE,
					TIMESTR => GVL.fbMachineTime.systemTime); 
IP231();
IP232();
IP233();
IP234();
IP235();
IP236();
IP237();

pmdev.bTrigReadCOmmision := FALSE;
CalculateVirtualMeter(	MeterMain := pmDev.DB05_10_5500 ,
						MeterSub := pmDev.DB05_09_5350,
						MeterVirtual := pmDev.PowerMeter_Db1_2);
						
 CalculateVirtualMeter( MeterMain := pmDev.DB04_06_5500,
                      MeterSub := pmDev.DB04_05_5350,
                       MeterVirtual :=  pmDev.PowerMeter_Db2_2);
 
 CalculateVirtualMeter( MeterMain := pmDev.DB04_04_5500,
                      MeterSub :=  pmDev.DB04_03_5350,
                       MeterVirtual :=  pmDev.PowerMeter_db3_2);
 
 CalculateVirtualMeter( MeterMain := pmDev.DB04_02_5500,
                      MeterSub := pmDev.DB04_01_5350,
                       MeterVirtual :=  pmDev.PowerMeter_db4_2);
 
 CalculateVirtualMeter( MeterMain := pmDev.DB03_04_5500,
                      MeterSub := pmDev.DB03_03_5350,
                       MeterVirtual :=  pmDev.PowerMeter_db5_2);
 
 CalculateVirtualMeter( MeterMain := pmDev.DB03_06_5500,
                      MeterSub := pmDev.DB03_05_5350,
                       MeterVirtual :=  pmDev.powerMeter_db6_2);
 
 CalculateVirtualMeter( MeterMain := pmDev.DB03_02_5500,
                      MeterSub := pmDev.DB03_01_5350,
                       MeterVirtual :=  pmDev.PowerMeter_db7_2);
 
 CalculateVirtualMeter( MeterMain := pmDev.DB05_04_5500,
                      MeterSub := pmDev.DB05_03_5350,
                       MeterVirtual :=  pmDev.PowerMeter_db8_2);
 
 CalculateVirtualMeter( MeterMain := pmDev.DB05_06_5500,
                      MeterSub := pmDev.DB05_05_5350,
                       MeterVirtual :=  pmDev.PowerMeter_db9_2);
 
 CalculateVirtualMeter( MeterMain := pmDev.DB05_08_5500,
                      MeterSub := pmDev.DB05_07_5350,
                       MeterVirtual :=  pmDev.PowerMeter_db10_2);
 
 CalculateVirtualMeter( MeterMain := pmDev.DB01_04_5500,
                      MeterSub := pmDev.DB01_03_5350,
                       MeterVirtual :=  pmDev.PowerMeter_db11_2);
 
 CalculateVirtualMeter( MeterMain :=  pmDev.DB01_01_5500,
                      MeterSub := pmDev.DB01_02_5350,
                       MeterVirtual :=  pmDev.PowerMeter_db12_2);
 
 CalculateVirtualMeter( MeterMain := pmDev.DB02_02_5500,
                      MeterSub := pmDev.DB02_01_5350,
                       MeterVirtual :=  pmDev.PowerMeter_db13_2);
 
 CalculateVirtualMeter( MeterMain := pmDev.DB02_06_5500,
                      MeterSub := pmDev.DB02_05_5350,
                       MeterVirtual :=  pmDev.PowerMeter_db14_2);
 
 CalculateVirtualMeter( MeterMain := pmDev.DB02_04_5500,
                      MeterSub := pmDev.DB02_03_5350,
                       MeterVirtual :=  pmDev.PowerMeter_db15_2);
					   
 

	

	
 ]]></ST>
    </Implementation>
    <Method Name="AsignOneMeterDetail" Id="{be86f5c1-7789-46bc-bddc-1e511a8f2e6d}">
      <Declaration><![CDATA[METHOD AsignOneMeterDetail : BOOL
VAR_INPUT
	st_meter	: REFERENCE TO ST_PowerMeter;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[	pmDev.Value01 := st_meter.Basic.Frequency;
	pmDev.Value02 := st_meter.Basic.PowerFactor;
	pmDev.Value03 := st_meter.Basic.Voltage_LLAvg;
	pmDev.Value04 := st_meter.Basic.Voltage_LNAvg;
	pmDev.Value05 := st_meter.Basic.Current_Avg;	
	pmDev.Value06 := st_meter.Basic.Real_PowerTotal;
	pmDev.Value07 := st_meter.Basic.Voltage_AB;
	pmDev.Value08 := st_meter.Basic.Voltage_AN;
	pmDev.Value09 := st_meter.Basic.Current_A;
	pmDev.Value10 := st_meter.Basic.Real_PowerA;
	pmDev.Value11 := st_meter.Basic.Voltage_BC;
	pmDev.Value12 := st_meter.Basic.Voltage_BN;
	pmDev.Value13 := st_meter.Basic.Current_B;
	pmDev.Value14 := st_meter.Basic.Real_PowerB;
	pmDev.Value15 := st_meter.Basic.Voltage_CA;
	pmDev.Value16 := st_meter.Basic.Voltage_CN;
	pmDev.Value17 := st_meter.Basic.Current_C;
	pmDev.Value18 := st_meter.Basic.Real_PowerC;
	pmDev.Value19 := st_meter.Basic.THDF_Current_N;
	pmDev.Value20 := st_meter.Basic.THDF_Voltage_LN;
	pmDev.Value21 := st_meter.Basic.THDF_Current_A;
	pmDev.Value22 := st_meter.Basic.THDF_Voltage_AB;
	pmDev.Value23 := st_meter.Basic.THDF_Current_B;
	pmDev.Value24 := st_meter.Basic.THDF_Voltage_BC;
	pmDev.Value25 := st_meter.Basic.THDF_Current_C;
	pmDev.Value26 := st_meter.Basic.THDF_Voltage_CA;
	pmDev.Value27 := st_meter.Basic.RealEnergy_IntoLoad;
	pmDev.Value28 := st_meter.Basic.ReactiveEnergy_IntoLoad;
	pmDev.Value29 := st_meter.Basic.ApparentEnergy_IntoLoad;
	pmDev.Value30 := st_meter.Basic.RealEnergy_OutLoad;
	pmDev.Value31 := st_meter.Basic.ReactiveEnergy_OutLoad;
	pmDev.Value32 := st_meter.Basic.ApparentEnergy_OutLoad;]]></ST>
      </Implementation>
    </Method>
    <Method Name="CalculateVirtualMeter" Id="{94a54871-6893-4261-8e03-616b0f50695a}">
      <Declaration><![CDATA[METHOD CalculateVirtualMeter : BOOL
VAR_INPUT
	MeterMain	: REFERENCE TO  ST_PowerMeter;// meterVirtual := MeterMain - MeterSub
	MeterSub	: REFERENCE TO ST_PowerMeter;// meterVirtual := MeterMain - MeterSub
	MeterVirtual : REFERENCE TO ST_PowerMeter; // meterVirtual := MeterMain - MeterSub
END_VAR
VAR_OUTPUT
	
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[	MeterVirtual.Basic.Current_Avg := MeterMain.Basic.Current_Avg - MeterSub.Basic.Current_Avg;
	MeterVirtual.Basic.Real_PowerTotal := MeterMain.Basic.Real_PowerTotal - MeterSub.Basic.Real_PowerTotal;
	MeterVirtual.Basic.RealEnergy_IntoLoad  := MeterMain.Basic.RealEnergy_IntoLoad - MeterSub.Basic.RealEnergy_IntoLoad;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="MAIN">
      <LineId Id="20105" Count="82" />
      <LineId Id="6718" Count="0" />
    </LineIds>
    <LineIds Name="MAIN.AsignOneMeterDetail">
      <LineId Id="7" Count="30" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="MAIN.CalculateVirtualMeter">
      <LineId Id="12" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>